--- a/todos-api-service/pom.xml
+++ b/todos-api-service/pom.xml
@@ -16,7 +16,7 @@
     <properties>
         <java.version>1.8</java.version>
         <todos-api-directory>todos-openapi-specs</todos-api-directory>
-        <todos-api-version>v1.2.3</todos-api-version>
+        <todos-api-version>v1.0.0</todos-api-version>
     </properties>
 
     <dependencies>
@@ -77,6 +77,18 @@
             <artifactId>springfox-core</artifactId>
             <version>3.0.0</version>
         </dependency>
+
+        <!--<dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.4</version>
+        </dependency>-->
     </dependencies>
 
     <build>
@@ -111,7 +123,7 @@
                                     <artifactId>todos-openapi-specs</artifactId>
                                     <version>1.0.0-SNAPSHOT</version>
                                     <classifier>api</classifier>
-                                    <outputDirectory>${project.build.directory}/yaml</outputDirectory>
+                                    <outputDirectory>${project.build.directory}/specs</outputDirectory>
                                     <type>zip</type>
                                     <overWrite>true</overWrite>
                                 </artifactItem>
@@ -134,7 +146,7 @@
                         </goals>
                         <phase>generate-sources</phase>
                         <configuration>
-                            <inputSpec>${project.build.directory}/yaml/${todos-api-directory}/client-api-${todos-api-version}.yaml</inputSpec>
+                            <inputSpec>${project.build.directory}/specs/${todos-api-directory}/client-api-${todos-api-version}.yaml</inputSpec>
                             <apiPackage>com.example.clean_arch.todos.ui.rest.api.v1</apiPackage>
                             <modelPackage>com.example.clean_arch.todos.ui.rest.api.v1.model</modelPackage>
                         </configuration>
