Fix specs syntax

--- a/todos-openapi-specs/src/main/resources/client-api-v1.yaml
+++ b/todos-openapi-specs/src/main/resources/client-api-v1.yaml
@@ -114,7 +114,7 @@ components:
       properties:
         userName:
           type: string
-        taskDesc
+        taskDesc:
           type: string
 
     TaskRespModel:
