--- a/todos-client/pom.xml
+++ b/todos-client/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example.clean_arch</groupId>
-    <artifactId>todos</artifactId>
+    <artifactId>todos-client</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>TODOS :: API Service</name>
+    <name>TODOS :: Client Service</name>
 
     <properties>
         <java.version>1.8</java.version>
@@ -19,16 +19,7 @@
         <todos-api-version>v1.0.0</todos-api-version>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
+    <dependencies>       
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -66,29 +57,12 @@
             <artifactId>jackson-databind-nullable</artifactId>
             <version>0.2.2</version>
         </dependency>
-
+ 
         <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-commons</artifactId>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>3.0.2</version>
         </dependency>
-
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-core</artifactId>
-            <version>3.0.0</version>
-        </dependency>
-
-        <!--<dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
-            <version>1.6.4</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
-            <version>1.6.4</version>
-        </dependency>-->
     </dependencies>
 
     <build>
@@ -140,15 +114,15 @@
                 <version>0.15.2</version>
                 <executions>
                     <execution>
-                        <id>generate-service-api-code</id>
+                        <id>generate-client-api-code</id>
                         <goals>
-                            <goal>generate-spring-boot-embedded</goal>
+                            <goal>generate-rest-template-embedded</goal>
                         </goals>
                         <phase>generate-sources</phase>
                         <configuration>
                             <inputSpec>${project.build.directory}/specs/${todos-api-directory}/client-api-${todos-api-version}.yaml</inputSpec>
-                            <apiPackage>com.example.clean_arch.todos.ui.rest.api.v1</apiPackage>
-                            <modelPackage>com.example.clean_arch.todos.ui.rest.api.v1.model</modelPackage>
+                            <apiPackage>com.example.clean_arch.todos_client.utils.api.client.v1</apiPackage>
+                            <modelPackage>com.example.clean_arch.todos_client.utils.api.client.v1.model</modelPackage>
                         </configuration>
                     </execution>
                 </executions>
